--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
     <img class="title-img" src="img/jig_intern.png" />
 
     <h1>API 接続テスト</h1>
-    <p>server.ts で定義した API にアクセスします</p>
+    <p>server.ts で定義した API にアクセスします。</p>
 
     <h2>/api/time</h2>
     <button id="timeButton">現在の日時</button>
