--- a/static/index.html
+++ b/static/index.html
@@ -9,11 +9,11 @@
     <h1 style="text-align:center"> 防災のおべんきょうべや</h1>
     <p style="text-align:center">  <iframe width="560" height="315" src="https://www.youtube.com/embed/x1f_z8KJmZ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
     <div class="container">
-        <div class="item"><img src="mon1.png" alt="問題１"></div>
-        <div class="item"><img src="mon2.png" alt="問題１"></div>
-        <div class="item"><img src="mon3.png" alt="問題１"></div>
-        <div class="item"><img src="mon4.png" alt="問題１"></div>
-        <div class="item"><img src="mon5.png" alt="問題１"></div>
+      <a href="mon1.html"><div class="item"><img src="mon1.png" alt="問題１"></div></a>
+      <a href="mon2.html"><div class="item"><img src="mon2.png" alt="問題１"></div></a>
+      <a href="mon3.html"><div class="item"><img src="mon3.png" alt="問題１"></div></a>
+      <a href="mon4.html"><div class="item"><img src="mon4.png" alt="問題１"></div></a>
+      <a href="mon5.html"><div class="item"><img src="mon5.png" alt="問題１"></div></a>
       </div>
   </body>
 </html>
