問題文の追加

--- a/static/mon3.html
+++ b/static/mon3.html
@@ -6,7 +6,18 @@
   </head>
   <body>
     <script>alert("問題3に挑戦です")</script> 
-    <h1 style="text-align:center"> 防災のおべんきょうべや</h1>
+    <h1 style="text-align:center"> 防災のおべんきょうべや[問題３]</h1>
+    <div class="ansimg" style="text-align:center"><img src="ans3.png" alt="問題１"></div>
+
+    <h1 style="text-align:center">Q_地震のゆれを感じたり、
+      緊急地震速報（きんきゅうじしんそくほう）が
+      ながれてきたとき、物が落ちてこない、倒れてこない、移動してこない
+      ところで、ゆれがおさまるまで様子をみる。</h1>
+    <div class="radio" style="text-align:center">
+        <input type="radio" name="Q3" >正しい<br>
+        <input type="radio" name="Q3">正しくない<br>
+        <input type="button" value="決定" onclick="ans()" />
+    </div>
 
 </body>
 </html>
