--- a/static/mon1.html
+++ b/static/mon1.html
@@ -5,8 +5,16 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <script>alert("問題2に挑戦です")</script> 
-    <h1 style="text-align:center"> 防災のおべんきょうべや</h1>
+    <script>alert("問題1に挑戦です")</script> 
+    <h1 style="text-align:center"> 防災のおべんきょうべや[問題１]</h1>
+    <div class="ansimg" style="text-align:center"><img src="ans1.png" alt="問題１"></div>
+
+    <h1 style="text-align:center">Q_外で地震が起きたので、ブロック塀の近くに移動した</h1>
+    <div class="radio" style="text-align:center">
+        <input type="radio" name="Q1" >正しい<br>
+        <input type="radio" name="Q1">正しくない<br>
+        <input type="button" value="決定" onclick="ans()" />
+    </div>
 
 </body>
 </html>
