--- a/static/mon2.html
+++ b/static/mon2.html
@@ -6,7 +6,16 @@
   </head>
   <body>
     <script>alert("問題2に挑戦です")</script> 
-    <h1 style="text-align:center"> 防災のおべんきょうべや</h1>
+    <h1 style="text-align:center"> 防災のおべんきょうべや[問題２]</h1>
+    <div class="ansimg" style="text-align:center"><img src="ans2.png" alt="問題１"></div>
+
+    <h1 style="text-align:center">Q_家屋や家具の下敷きになっている人を見つけたので、大声で助けを呼び、協力して救出した</h1>
+    <div class="radio" style="text-align:center">
+        <input type="radio" name="Q2" >正しい<br>
+        <input type="radio" name="Q2">正しくない<br>
+        <input type="button" value="決定" onclick="ans()" />
+    </div>
+
 
 </body>
 </html>
