--- a/static/mon4.html
+++ b/static/mon4.html
@@ -6,7 +6,15 @@
   </head>
   <body>
     <script>alert("問題4に挑戦です")</script> 
-    <h1 style="text-align:center"> 防災のおべんきょうべや</h1>
+    <h1 style="text-align:center"> 防災のおべんきょうべや[問題４]</h1>
+    <div class="ansimg" style="text-align:center"><img src="ans4.png" alt="問題１"></div>
+
+    <h1 style="text-align:center">Q_ゆれがおさまったら,安心してよい。</h1>
+    <div class="radio" style="text-align:center">
+        <input type="radio" name="Q4" >正しい<br>
+        <input type="radio" name="Q4">正しくない<br>
+        <input type="button" value="決定" onclick="ans()" />
+    </div>
 
 </body>
 </html>
