--- a/static/mon5.html
+++ b/static/mon5.html
@@ -6,7 +6,15 @@
   </head>
   <body>
     <script>alert("問題5に挑戦です")</script> 
-    <h1 style="text-align:center"> 防災のおべんきょうべや</h1>
+    <h1 style="text-align:center"> 防災のおべんきょうべや[問題５]</h1>
+    <div class="ansimg" style="text-align:center"><img src="ans5.png" alt="問題１"></div>
+
+    <h1 style="text-align:center">Q_お買い物中に地震が発生したので、すぐに出口に向かった</h1>
+    <div class="radio" style="text-align:center">
+        <input type="radio" name="Q5" >正しい<br>
+        <input type="radio" name="Q5">正しくない<br>
+        <input type="button" value="決定" onclick="ans()" />
+    </div>
 
 </body>
 </html>
