--- a/static/mon1.html
+++ b/static/mon1.html
@@ -11,8 +11,8 @@
 
     <h1 style="text-align:center">Q_外で地震が起きたので、ブロック塀の近くに移動した</h1>
     <div class="radio" style="text-align:center">
-        <input type="radio" name="Q1" >正しい<br>
-        <input type="radio" name="Q1">正しくない<br>
+        <input type="radio" name="Q1" value="false">正しい<br>
+        <input type="radio" name="Q1" value="true">正しくない<br>
         <input type="button" value="決定" onclick="ans()" />
     </div>
 
