--- a/static/mon2.html
+++ b/static/mon2.html
@@ -11,8 +11,8 @@
 
     <h1 style="text-align:center">Q_家屋や家具の下敷きになっている人を見つけたので、大声で助けを呼び、協力して救出した</h1>
     <div class="radio" style="text-align:center">
-        <input type="radio" name="Q2" >正しい<br>
-        <input type="radio" name="Q2">正しくない<br>
+        <input type="radio" name="Q2" value="true">正しい<br>
+        <input type="radio" name="Q2" value="false">正しくない<br>
         <input type="button" value="決定" onclick="ans()" />
     </div>
 
