--- a/static/mon4.html
+++ b/static/mon4.html
@@ -11,8 +11,8 @@
 
     <h1 style="text-align:center">Q_ゆれがおさまったら,安心してよい。</h1>
     <div class="radio" style="text-align:center">
-        <input type="radio" name="Q4" >正しい<br>
-        <input type="radio" name="Q4">正しくない<br>
+        <input type="radio" name="Q4" value="false">正しい<br>
+        <input type="radio" name="Q4" value="true">正しくない<br>
         <input type="button" value="決定" onclick="ans()" />
     </div>
 
