--- a/static/mon5.html
+++ b/static/mon5.html
@@ -11,8 +11,8 @@
 
     <h1 style="text-align:center">Q_お買い物中に地震が発生したので、すぐに出口に向かった</h1>
     <div class="radio" style="text-align:center">
-        <input type="radio" name="Q5" >正しい<br>
-        <input type="radio" name="Q5">正しくない<br>
+        <input type="radio" name="Q5" value="false">正しい<br>
+        <input type="radio" name="Q5" value="true">正しくない<br>
         <input type="button" value="決定" onclick="ans()" />
     </div>
 
