--- a/static/mon1.html
+++ b/static/mon1.html
@@ -10,11 +10,12 @@
     <div class="ansimg" style="text-align:center"><img src="ans1.png" alt="問題１"></div>
 
     <h1 style="text-align:center">Q_外で地震が起きたので、ブロック塀の近くに移動した</h1>
+    <form method="GET" action="/server.ts">
     <div class="radio" style="text-align:center">
         <input type="radio" name="Q1" value="false">正しい<br>
         <input type="radio" name="Q1" value="true">正しくない<br>
         <input type="button" value="決定" onclick="ans()" />
     </div>
-
+  </form>
 </body>
 </html>
