--- a/static/mon4.html
+++ b/static/mon4.html
@@ -10,11 +10,12 @@
     <div class="ansimg" style="text-align:center"><img src="ans4.png" alt="問題１"></div>
 
     <h1 style="text-align:center">Q_ゆれがおさまったら,安心してよい。</h1>
+    <form method="GET" action="/server.ts">
     <div class="radio" style="text-align:center">
         <input type="radio" name="Q4" value="false">正しい<br>
         <input type="radio" name="Q4" value="true">正しくない<br>
         <input type="button" value="決定" onclick="ans()" />
     </div>
-
+  </form>
 </body>
 </html>
