--- a/static/false.html
+++ b/static/false.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <script>alert("不正解です！")</script> 
-    <h1 href="index.html">ホームへ戻る</h1>
+    <a href="index.html"><h1>ホームへ戻る</h1></a>
   </body>
 </html>
