--- a/static/mon2.html
+++ b/static/mon2.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <script>alert("問題2に挑戦です")</script> 
+    <script type="module" src="main.js">alert("問題2に挑戦です")</script> 
     <h1 style="text-align:center"> 防災のおべんきょうべや[問題２]</h1>
     <div class="ansimg" style="text-align:center"><img src="ans2.png" alt="問題１"></div>
 
