--- a/static/mon2.html
+++ b/static/mon2.html
@@ -10,13 +10,14 @@
     <div class="ansimg" style="text-align:center"><img src="ans2.png" alt="問題１"></div>
 
     <h1 style="text-align:center">Q_家屋や家具の下敷きになっている人を見つけたので、大声で助けを呼び、協力して救出した</h1>
-    <form method="GET" action="/server.ts">
-    <div class="radio" style="text-align:center">
-        <input type="radio" name="Q2" value="true">正しい<br>
-        <input type="radio" name="Q2" value="false">正しくない<br>
-        <input type="button" value="決定" onclick="ans()" />
-    </div>
-  </form>
+    <form method="GET" action="/api/answer">
+      <div class="radio" style="text-align:center">
+        <input type="hidden" name="id" value="2">
+        <input type="radio" name="answer" value="false">正しい<br>
+        <input type="radio" name="answer" value="true">正しくない<br>
+        <input type="submit" value="決定">
+      </div>
+</form>
 
 </body>
 </html>
