--- a/static/mon5.html
+++ b/static/mon5.html
@@ -10,12 +10,13 @@
     <div class="ansimg" style="text-align:center"><img src="ans5.png" alt="問題１"></div>
 
     <h1 style="text-align:center">Q_お買い物中に地震が発生したので、すぐに出口に向かった</h1>
-    <form method="GET" action="/server.ts">
-    <div class="radio" style="text-align:center">
-        <input type="radio" name="Q5" value="false">正しい<br>
-        <input type="radio" name="Q5" value="true">正しくない<br>
-        <input type="button" value="決定" onclick="ans()" />
-    </div>
-  </form>
+    <form method="GET" action="/api/answer">
+      <div class="radio" style="text-align:center">
+        <input type="hidden" name="id" value="5">
+        <input type="radio" name="answer" value="false">正しい<br>
+        <input type="radio" name="answer" value="true">正しくない<br>
+        <input type="submit" value="決定">
+      </div>
+</form>
 </body>
 </html>
