問題分岐の修正

--- a/static/ans4.html
+++ b/static/ans4.html
@@ -5,6 +5,11 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <script>alert("正解です！")</script> 
+    <script>alert("正解です！")</script>
+    <h1>ゆれがおさまっても
+      ものが落ちてくる
+      かもしれないので
+      注意してください。</h1>
+<a href="index.html"><h1>ホームへ戻る</h1></a>
   </body>
 </html>
