--- a/static/mon5.html
+++ b/static/mon5.html
@@ -13,8 +13,8 @@
     <form method="GET" action="/api/answer">
       <div class="radio" style="text-align:center">
         <input type="hidden" name="id" value="5">
-        <input type="radio" name="answer" value="false">正しい<br>
-        <input type="radio" name="answer" value="true">正しくない<br>
+        <input type="radio" name="answer" value="true">正しい<br>
+        <input type="radio" name="answer" value="false">正しくない<br>
         <input type="submit" value="決定">
       </div>
 </form>
