change the ans page

--- a/static/ans3.html
+++ b/static/ans3.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <script>alert("正解です！")</script> 
+    <script>alert("正解です！")</script>
+    <a href="index.html"><h1>問題4へ行く</h1></a>
   </body>
 </html>
