--- a/static/mon1.html
+++ b/static/mon1.html
@@ -8,8 +8,8 @@
     <script>alert("問題1に挑戦です")</script> 
     <h1 style="text-align:center"> 防災のおべんきょうべや[問題１]</h1>
     <div class="ansimg" style="text-align:center"><img src="ans1.png" alt="問題１"></div>
-
-    <h1 style="text-align:center">Q_外で地震が起きたので、ブロック塀の近くに移動した</h1>
+    <div class="mon"><h1 style="text-align:center">Q_1　外で地震が起きたら?</h1></div>
+    <h2 style="text-align:center">外で地震が起きたので、ブロック塀の近くに移動した</h2>
     <form method="GET" action="/api/answer">
       <div class="radio" style="text-align:center">
         <input type="hidden" name="id" value="1">
