--- a/static/mon2.html
+++ b/static/mon2.html
@@ -8,8 +8,8 @@
     <script>alert("問題2に挑戦です")</script> 
     <h1 style="text-align:center"> 防災のおべんきょうべや[問題２]</h1>
     <div class="ansimg" style="text-align:center"><img src="ans2.png" alt="問題１"></div>
-
-    <h1 style="text-align:center">Q_家屋や家具の下敷きになっている人を見つけたので、大声で助けを呼び、協力して救出した</h1>
+    <div class="mon"><h1 style="text-align:center">Q_2　災害時のコミュニケーション</h1></div>
+    <h2 style="text-align:center">家屋や家具の下敷きになっている人を見つけたので、大声で助けを呼び、協力して救出した</h2>
     <form method="GET" action="/api/answer">
       <div class="radio" style="text-align:center">
         <input type="hidden" name="id" value="2">
