--- a/static/mon3.html
+++ b/static/mon3.html
@@ -8,11 +8,11 @@
     <script>alert("問題3に挑戦です")</script> 
     <h1 style="text-align:center"> 防災のおべんきょうべや[問題３]</h1>
     <div class="ansimg" style="text-align:center"><img src="ans3.png" alt="問題１"></div>
-
-    <h1 style="text-align:center">Q_地震のゆれを感じたり、
+    <div class="mon"><h1 style="text-align:center">Q_3　家の中で地震が起きたら?</h1></div>
+    <h2 style="text-align:center">地震のゆれを感じたり、
       緊急地震速報（きんきゅうじしんそくほう）が
       ながれてきたとき、物が落ちてこない、倒れてこない、移動してこない
-      ところで、ゆれがおさまるまで様子をみる。</h1>
+      ところで、ゆれがおさまるまで様子をみる。</h2>
       <form method="GET" action="/api/answer">
         <div class="radio" style="text-align:center">
           <input type="hidden" name="id" value="3">
