--- a/static/mon4.html
+++ b/static/mon4.html
@@ -8,8 +8,8 @@
     <script>alert("問題4に挑戦です")</script> 
     <h1 style="text-align:center"> 防災のおべんきょうべや[問題４]</h1>
     <div class="ansimg" style="text-align:center"><img src="ans4.png" alt="問題１"></div>
-
-    <h1 style="text-align:center">Q_ゆれがおさまったら,安心してよい。</h1>
+    <div class="mon"><h1 style="text-align:center">Q_4　地震の後の行動</h1></div>
+    <h2 style="text-align:center">ゆれがおさまったら,安心してよい。</h2>
     <form method="GET" action="/api/answer">
       <div class="radio" style="text-align:center">
         <input type="hidden" name="id" value="4">
