--- a/static/mon5.html
+++ b/static/mon5.html
@@ -8,8 +8,8 @@
     <script>alert("問題5に挑戦です")</script> 
     <h1 style="text-align:center"> 防災のおべんきょうべや[問題５]</h1>
     <div class="ansimg" style="text-align:center"><img src="ans5.png" alt="問題１"></div>
-
-    <h1 style="text-align:center">Q_お買い物中に地震が発生したので、すぐに出口に向かった</h1>
+    <div class="mon"><h1 style="text-align:center">Q_5　人がおおぜいいる施設</h1></div>
+    <h2 style="text-align:center">Q_お買い物中に地震が発生したので、すぐに出口に向かった</h2>
     <form method="GET" action="/api/answer">
       <div class="radio" style="text-align:center">
         <input type="hidden" name="id" value="5">
