--- a/static/ans1.html
+++ b/static/ans1.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <a href="mon2.html"><h1>問題2へ行く</h1></a>
     <script>alert("正解です！")</script>
-    <a href="index.html"><h1>問題2へ行く</h1></a>
   </body>
 </html>
