change ans1 & ans2 html file

--- a/static/ans1.html
+++ b/static/ans1.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <a href="mon2.html"><h1>問題2へ行く</h1></a>
+    <a href="index.html"><h1>ホームを戻る</h1></a>
     <script>alert("正解です！")</script>
   </body>
 </html>
