--- a/static/ans2.html
+++ b/static/ans2.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <script>alert("正解です！")</script> 
+    <a href="mon3.html"><h1>問題3へ行く</h1></a>
+    <a href="index.html"><h1>ホームを戻る</h1></a>
+    <script>alert("正解です！")</script>
   </body>
 </html>
