--- a/static/ans5.html
+++ b/static/ans5.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <script>alert("正解です！")</script> 
+    <script>alert("正解です！")</script>
+    <h1>おめでとうございます！</h1>
+    <a href="index.html"><h1>ホームへ戻る</h1></a> 
   </body>
 </html>
