最後のページを追加しました

--- a/static/end.html
+++ b/static/end.html
@@ -10,6 +10,7 @@
         <a href="https://www.data.jma.go.jp/svd/eqev/data/jishin_bosai/index.html"><div class="item"><h1> 備え </h1></div></a>
         <a href="https://www.data.jma.go.jp/eew/data/nc/kunren/kunren.html"><div class="item"><h1> 訓練 </h1></div></a>
         <a href="https://www.data.jma.go.jp/eew/data/nc/koudou/koudou.html"><div class="item"><h1> 行動 </h1></div></a>
+        <a href="https://www.kobe-sonae.jp/study/cat01/000145/"><div class="item"><h1>他の防災クイズはこちら </h1></div></a>
         <a href="index.html"><h1>ホームへ戻る</h1></a>
 　
 </form>
