--- a/static/ans2.html
+++ b/static/ans2.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <a href="mon3.html"><h1>問題3へ行く</h1></a>
+    <h1>大切なのはお互い助け合うことです。</h1>
     <a href="index.html"><h1>ホームを戻る</h1></a>
     <script>alert("正解です！")</script>
   </body>
