--- a/static/ans3.html
+++ b/static/ans3.html
@@ -7,7 +7,7 @@
   <body>
     <script>alert("正解です！")</script> 
     <h1>地震が発生したら、机の下に隠れて、ものから身を守りましょう！</h1>
-    <a href="index.html"><h1>問題4へ行く</h1></a>
+    <a href="mon4.html"><h1>問題4へ行く</h1></a>
     <a href="index.html"><h1>ホームへ戻る</h1></a>
   </body>
 </html>
