--- a/static/ans4.html
+++ b/static/ans4.html
@@ -10,7 +10,7 @@
       ものが落ちてくる
       かもしれないので
       注意してください。</h1>
-<a href="ans5.html"><h1>問題５へ行く</h1></a>
+<a href="mon5.html"><h1>問題５へ行く</h1></a>
 <a href="index.html"><h1>ホームへ戻る</h1></a>
   </body>
 </html>
