--- a/static/end.html
+++ b/static/end.html
@@ -11,6 +11,7 @@
         <a href="https://www.data.jma.go.jp/eew/data/nc/kunren/kunren.html"><div class="item"><h1> 訓練 </h1></div></a>
         <a href="https://www.data.jma.go.jp/eew/data/nc/koudou/koudou.html"><div class="item"><h1> 行動 </h1></div></a>
         <a href="https://www.kobe-sonae.jp/study/cat01/000145/"><div class="item"><h1>他の防災クイズはこちら </h1></div></a>
+        <a href="end2.html"><div class="item"><h1>他の防災情報はこちら </h1></div></a>
         <a href="index.html"><h1>ホームへ戻る</h1></a>
 　
 </form>
