--- a/static/ans5.html
+++ b/static/ans5.html
@@ -7,7 +7,7 @@
   <body>
 
     <script>alert("正解です！")</script> 
-    <h1>人がおおぜいいる施設では、店員さんの指示に従ってください！</h1>
+    <h1>人がおおぜいいる施設では慌てずに、店員さんの指示に従ってください！</h1>
     <a href="end.html"><h1>もっと知りたい</h1></a>
     <a href="index.html"><h1>ホームへ戻る</h1></a>
   </body>
