--- a/static/end2.html
+++ b/static/end2.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <script>alert("最後の問題をクリアされました！")</script> 
-    <div class="mon"><h1>こちらも見ておきましょう！！↓</h1></div>
+    <script>alert("勉強熱心なのは良いことです")</script> 
+    <div class="mon"><h1>防災情報！！↓</h1></div>
         <a href="https://earthquake.tenki.jp/bousai/earthquake/entries/"><div class="item"><h1> 過去の地震情報 </h1></div></a>
         <a href="https://www.data.jma.go.jp/svd/eqev/data/higai/higai1996-new.html"><div class="item"><h1> 日本付近で発生した主な被害地震 </h1></div></a>
         <a href="https://www.kyoshin.bosai.go.jp/cgi-bin/kyoshin/bigeqs/index.cgi"><div class="item"><h1> 過去の大きな地震特集 </h1></div></a>
