add google map api

--- a/static/index.html
+++ b/static/index.html
@@ -14,6 +14,7 @@
       <a href="mon3.html"><div class="item"><img src="mon3.png" alt="問題１"></div></a>
       <a href="mon4.html"><div class="item"><img src="mon4.png" alt="問題１"></div></a>
       <a href="mon5.html"><div class="item"><img src="mon5.png" alt="問題１"></div></a>
+      <a href="map.html"><h1>ホームを戻る</h1></a>
       </div>
   </body>
 </html>
