--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,7 @@
     <script>alert("まずは動画を見て勉強しましょう")</script> 
     <h1 style="text-align:center"> 防災のおべんきょうべや</h1>
     <p style="text-align:center">  <iframe width="560" height="315" src="https://www.youtube.com/embed/x1f_z8KJmZ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+    <div class="map"><a href="map.html"><h1> googleマップで過去の震源地を表示 </h1></a></div>
     <div class="container">
       <a href="mon1.html"><div class="item"><img src="mon1.png" alt="問題１"></div></a>
       <a href="mon2.html"><div class="item"><img src="mon2.png" alt="問題１"></div></a>
