--- a/static/mon3.html
+++ b/static/mon3.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <script type="module" src="main.js">alert("問題3に挑戦です")</script> 
-    <h1 style="text-align:center"> 防災のおべんきょうべや[問題３]</h1>
+    <div class="map"><a href="index.html"><h1 style="text-align:center"> 防災のおべんきょうべや[問題３]</h1></a></div>
     <div class="ansimg" style="text-align:center"><img src="ans3.png" alt="問題１"></div>
     <div class="mon"><h1 style="text-align:center">Q_3　家の中で地震が起きたら?</h1></div>
     <h2 style="text-align:center">地震のゆれを感じたり、
