--- a/static/mon4.html
+++ b/static/mon4.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <script type="module" src="main.js">alert("問題4に挑戦です")</script> 
-    <h1 style="text-align:center"> 防災のおべんきょうべや[問題４]</h1>
+    <div class="map"><a href="index.html"><h1 style="text-align:center"> 防災のおべんきょうべや[問題４]</h1></a></div>
     <div class="ansimg" style="text-align:center"><img src="ans4.png" alt="問題１"></div>
     <div class="mon"><h1 style="text-align:center">Q_4　地震直後の行動</h1></div>
     <h2 style="text-align:center">ゆれがおさまったら,安心してよい。</h2>
