--- a/static/mon1.html
+++ b/static/mon1.html
@@ -10,7 +10,7 @@
     <div class="map"><a href="index.html"><h1 style="text-align:center"> 防災のおべんきょうべや[問題１]</h1></a></div>
     <div class="ansimg" style="text-align:center"><img src="ans1.png" alt="問題１"></div>
     <div class="mon"><h1 style="text-align:center">Q_1　外で地震が起きたら?</h1></div>
-    <h2 style="text-align:center">外で地震が起きたので、ブロック塀の近くに移動した</h2>
+    <h2 style="text-align:center">外で地震が起きたので、ブロック塀（べい）の近くに移動した</h2>
     <form method="GET" action="/api/answer">
       <div class="radio" style="text-align:center">
         <input type="hidden" name="id" value="1">
